spring setup